#6809 fix truncated labels on tabs

--- a/js/notebook/src/tree/styles/tree.css
+++ b/js/notebook/src/tree/styles/tree.css
@@ -40,7 +40,7 @@
   min-width: 35px;
   margin-left: -1px;
   border: 1px solid transparent;
-  padding: 6px 15px 4px 15px;
+  padding: 4px 15px;
 }
 
 #beakerx-tree-widget .p-TabBar-tab:first-child {
